--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -1466,5 +1466,5 @@
   "Dark mode": "Dark mode",
   "Invalid pair": "Invalid pair",
   "V1 (old)": "V1 (old)",
-  "You won points for joigning PancakeSwap during the first year of our journey!": "You won points for joigning PancakeSwap during the first year of our journey!"
+  "You won points for joining PancakeSwap during the first year of our journey!": "You won points for joining PancakeSwap during the first year of our journey!"
 }
